// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vslider.vue should be focused when active 1`] = `

<div class="v-input v-input--slider v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: relative;"
      >
      </label>
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 50%;"
        >
          <div class="v-slider__thumb primary">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`Vslider.vue should match a snapshot 1`] = `

<div class="v-input v-input--slider theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: relative;"
      >
      </label>
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container">
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`Vslider.vue should render component with thumbLabel and match a snapshot 1`] = `

<div class="v-input v-input--slider theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: relative;"
      >
      </label>
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container v-slider__thumb-container-label">
          <div class="v-slider__thumb">
          </div>
          <div class="v-slider__thumb-label__container"
               style="display: none;"
          >
            <div class="v-slider__thumb-label">
              <span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`Vslider.vue should render component with ticks and match a snapshot 1`] = `

<div class="v-input v-input--slider v-input--ticks theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <label class="v-label"
             style="left: 0px; position: relative;"
      >
      </label>
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container">
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
